Instalación de la plantilla SB Admin 2
Más detalles: https://startbootstrap.com/themes/sb-admin-2/

--- a/proyecto/package.json
+++ b/proyecto/package.json
@@ -21,13 +21,14 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.0",
     "chance": "^1.1.4",
     "firebase": "^7.14.1",
     "jquery": "^3.4.1",
     "ngx-spinner": "^9.0.2",
     "ngx-toastr": "^11.3.3",
     "rxjs": "~6.4.0",
+    "startbootstrap-sb-admin-2": "^4.0.7",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
