--- a/proyecto/angular.json
+++ b/proyecto/angular.json
@@ -22,12 +22,14 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/startbootstrap-sb-admin-2/css/sb-admin-2.min.css",
               "src/styles.css",
               "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/startbootstrap-sb-admin-2/js/sb-admin-2.min.js"
             ]
           },
           "configurations": {
