--- a/proyecto/angular.json
+++ b/proyecto/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ejemplo-clase": {
+    "proyecto": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ejemplo-clase",
+            "outputPath": "dist/proyecto",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -65,18 +65,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ejemplo-clase:build"
+            "browserTarget": "proyecto:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ejemplo-clase:build:production"
+              "browserTarget": "proyecto:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ejemplo-clase:build"
+            "browserTarget": "proyecto:build"
           }
         },
         "test": {
@@ -102,16 +102,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ejemplo-clase:serve"
+            "devServerTarget": "proyecto:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "ejemplo-clase:serve:production"
+              "devServerTarget": "proyecto:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "ejemplo-clase"
+  "defaultProject": "proyecto"
 }
