--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
         run: npm run build
 
       - name: Deploy a firebase
+        if: github.ref == 'refs/heads/master'
         uses: w9jds/firebase-action@v1.3.1
         with:
           args: deploy --only hosting
