--- a/proyecto/angular.json
+++ b/proyecto/angular.json
@@ -29,7 +29,7 @@
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
               "node_modules/startbootstrap-sb-admin-2/vendor/jquery-easing/jquery.easing.min.js",
               "node_modules/startbootstrap-sb-admin-2/js/sb-admin-2.min.js",
               "node_modules/startbootstrap-sb-admin-2/vendor/chart.js/Chart.min.js"
