--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Deploy a firebase
         if: github.ref == 'refs/heads/master'
-        uses: w9jds/firebase-action@v1.3.1
+        uses: w9jds/firebase-action@master
         with:
           args: deploy --only hosting
         env:
